Sandbox/02-12-2025/force-app/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>