Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Access_Request__c.field-meta.xml
<CustomField>
    <fullName>Access_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Request</label>
    <type>Checkbox</type>
</CustomField>