Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/comScore_Impression__c.field-meta.xml
<CustomField>
    <fullName>comScore_Impression__c</fullName>
    <label>comScore Impressions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>