Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Consent_Events__c.field-meta.xml
<CustomField>
    <fullName>Consent_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent (Events)</label>
    <type>Checkbox</type>
</CustomField>