Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Consent_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Consent_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent (Jobs)</label>
    <type>Checkbox</type>
</CustomField>