Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Contract_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Date__c</fullName>
    <label>Contract Sent Date</label>
    <type>Date</type>
</CustomField>