Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Data_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Data_Coverage__c</fullName>
    <label>Data Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>