Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/ebsta1__Ebsta_Score_Trend_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>ebsta1__Ebsta_Score_Trend_Last_30_Days__c</fullName>
    <label>Ebsta Score Trend Last 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>