Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Email_Opened__c.field-meta.xml
<CustomField>
    <fullName>Email_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opened</label>
    <type>Checkbox</type>
</CustomField>