Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <label>Lead Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Holding Company</fullName>
            </value>
            <value>
                <fullName>Media Agency</fullName>
            </value>
            <value>
                <fullName>Parent Account</fullName>
            </value>
            <value>
                <fullName>Child Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>