Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Lead_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_List_Name__c</fullName>
    <label>Lead List Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales Mailing List A</fullName>
            </value>
            <value>
                <fullName>Inside Sales Mailing List B</fullName>
            </value>
            <value>
                <fullName>Boutique Agencies (US) List A</fullName>
            </value>
            <value>
                <fullName>Boutique Agencies (US) List B</fullName>
            </value>
            <value>
                <fullName>AMES 2016</fullName>
            </value>
            <value>
                <fullName>Unallocated Oct-Dec 2015 A</fullName>
            </value>
            <value>
                <fullName>Unallocated Oct-Dec 2015 B</fullName>
            </value>
            <value>
                <fullName>Unallocated Jan 2016</fullName>
            </value>
            <value>
                <fullName>Unallocated Feb 2016</fullName>
            </value>
            <value>
                <fullName>Unallocated</fullName>
            </value>
            <value>
                <fullName>Boutique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>