Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Lead_Source_Other__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Other__c</fullName>
    <label>Lead Source (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>