Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <label>Parent Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>