Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Platforms_used__c.field-meta.xml
<CustomField>
    <fullName>Platforms_used__c</fullName>
    <description>List of platforms buyer is using</description>
    <inlineHelpText>Please select all platforms the buyer is using.</inlineHelpText>
    <label>Platforms used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adap.tv</fullName>
            </value>
            <value>
                <fullName>Adform</fullName>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Aggregate Knowledge</fullName>
            </value>
            <value>
                <fullName>Appier</fullName>
            </value>
            <value>
                <fullName>AppNexus</fullName>
            </value>
            <value>
                <fullName>Brightroll</fullName>
            </value>
            <value>
                <fullName>DataXu</fullName>
            </value>
            <value>
                <fullName>DBM</fullName>
            </value>
            <value>
                <fullName>Google Audience Center</fullName>
            </value>
            <value>
                <fullName>Google DFP</fullName>
            </value>
            <value>
                <fullName>IgnitionOne</fullName>
            </value>
            <value>
                <fullName>Krux</fullName>
            </value>
            <value>
                <fullName>Lotame</fullName>
            </value>
            <value>
                <fullName>MediaMath</fullName>
            </value>
            <value>
                <fullName>Rocketfuel</fullName>
            </value>
            <value>
                <fullName>SpotXchange</fullName>
            </value>
            <value>
                <fullName>The Trade Desk</fullName>
            </value>
            <value>
                <fullName>TubeMogul</fullName>
            </value>
            <value>
                <fullName>Turn</fullName>
            </value>
            <value>
                <fullName>Viant</fullName>
            </value>
            <value>
                <fullName>Videology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>