Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code__c</fullName>
    <label>Referral Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>