Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/SAR_Regulation__c.field-meta.xml
<CustomField>
    <fullName>SAR_Regulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAR Regulation from Case submission</description>
    <label>SAR Regulation</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>