Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/SAR_Regulation_V2__c.field-meta.xml
<CustomField>
    <fullName>SAR_Regulation_V2__c</fullName>
    <label>SAR Regulation v2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAR_Regulation</valueSetName>
    </valueSet>
</CustomField>