Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/SF_Owner_For_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>SF_Owner_For_HubSpot__c</fullName>
    <description>Takes Owner First Name and makes it readable on HubSpot</description>
    <label>SF Owner (For HubSpot)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>