Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <label>Site Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branded Data Partner</fullName>
            </value>
            <value>
                <fullName>Ad Network</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Beauty</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Booking Engine</fullName>
            </value>
            <value>
                <fullName>Dating</fullName>
            </value>
            <value>
                <fullName>Downloading</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Gambling</fullName>
            </value>
            <value>
                <fullName>Games</fullName>
            </value>
            <value>
                <fullName>General Conent</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Hobbies</fullName>
            </value>
            <value>
                <fullName>Hotel/Accomodation</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Magazines</fullName>
            </value>
            <value>
                <fullName>Mens</fullName>
            </value>
            <value>
                <fullName>Movies</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>News / Blog</fullName>
            </value>
            <value>
                <fullName>Price Comparison</fullName>
            </value>
            <value>
                <fullName>Product / Service Listings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>