Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/Sync_to_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_HubSpot__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Please tick only if email is valid.</inlineHelpText>
    <label>Sync to HubSpot</label>
    <type>Checkbox</type>
</CustomField>