Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/UnbounceSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>UnbounceSubmissionDate__c</fullName>
    <label>Unbounce Submission Date</label>
    <type>Date</type>
</CustomField>