Sandbox/02-12-2025/force-app/main/default/objects/Lead/fields/UnbounceSubmissionTime__c.field-meta.xml
<CustomField>
    <fullName>UnbounceSubmissionTime__c</fullName>
    <label>Unbounce Submission Time</label>
    <length>250</length>
    <type>Text</type>
</CustomField>