Sandbox/02-12-2025/force-app/main/default/objects/Lead/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <businessProcess>Publisher</businessProcess>
    <label>General</label>
</RecordType>