Sandbox/02-12-2025/force-app/main/default/objects/Lead/validationRules/LinkedIn_Profile_or_Email_check.validationRule-meta.xml
<ValidationRule>
    <fullName>LinkedIn_Profile_or_Email_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(Email),  ISBLANK(LinkedIn_Profile__c))</errorConditionFormula>
    <errorMessage>Please fill in either the Email or LinkedIn Profile field.</errorMessage>
</ValidationRule>