Sandbox/02-12-2025/force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>Region__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Lead_Type__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Source__c</columns>
    <columns>Lead_Source_Other__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Source_Other__c</field>
        <operation>equals</operation>
        <value>Campaign Test</value>
    </filters>
    <label>All Open Leads</label>
</ListView>