Sandbox/02-12-2025/force-app/main/default/objects/Lead/listViews/Alpha_Onboarding_Asia.listView-meta.xml
<ListView>
    <fullName>Alpha_Onboarding_Asia</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>Regionv2__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LinkedIn_Profile__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Other__c</columns>
    <columns>Conversation_History__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.General</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>AJ,GEB</value>
    </filters>
    <filters>
        <field>Regionv2__c</field>
        <operation>equals</operation>
        <value>Asia</value>
    </filters>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>notEqual</operation>
    </filters>
    <label>Alpha Onboarding_Asia</label>
    <sharedTo>
        <role>Director_Commercial_Development</role>
        <role>Managing_Director_EMEA</role>
    </sharedTo>
</ListView>