Sandbox/02-12-2025/force-app/main/default/objects/Lead/listViews/APAC_Leads.listView-meta.xml
<ListView>
    <fullName>APAC_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Other__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>includes</operation>
        <value>APAC</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.General</value>
    </filters>
    <filters>
        <field>Spam__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Inactive_Lead__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>APAC Leads</label>
</ListView>