Sandbox/02-12-2025/force-app/main/default/objects/Lead/listViews/Asia_Job_Title_June_2021_A.listView-meta.xml
<ListView>
    <fullName>Asia_Job_Title_June_2021_A</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>Regionv2__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LinkedIn_Profile__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Other__c</columns>
    <columns>Conversation_History__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.General</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>AJ,GEB,PAK,TL</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Email Bounced,Response Received - Not Interested,Unqualified</value>
    </filters>
    <filters>
        <field>Lead_Source_Other__c</field>
        <operation>equals</operation>
        <value>Asia Job Title - June 2021 (A)</value>
    </filters>
    <label>Asia - Job Title - June 2021 (A)</label>
</ListView>