Sandbox/02-12-2025/force-app/main/default/objects/Lead/listViews/Commercial_Dev_Leads_AU_Auto_List.listView-meta.xml
<ListView>
    <fullName>Commercial_Dev_Leads_AU_Auto_List</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>Regionv2__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LinkedIn_Profile__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Lead_Source_Other__c</columns>
    <columns>Conversation_History__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.General</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>AJ,GEB,PAK,TL</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Email Bounced,Response Received - Not Interested,Unqualified</value>
    </filters>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Automotive</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>equals</operation>
        <value>Australia,AU</value>
    </filters>
    <label>Commercial Dev Leads_AU Auto List</label>
    <sharedTo>
        <group>Commercial_Development_Team</group>
    </sharedTo>
</ListView>